# wstui

./: .gitignore  Cargo.toml  README.md
docs/: KITTY_IMAGE_RENDER_FINDINGS.md
src/: app.rs  db.rs  key_handler.rs  lib.rs  list.rs  main.rs  message_list.rs  ui.rs  vim.rs
src/app/: events.rs  inputs.rs  vim_input.rs
src/list/: list.rs  rendering.rs  state.rs
src/ui/: message_list.rs  text_input.rs
whatsrust/: Cargo.toml  build.rs
whatsrust/lib/: go.mod  go.sum  lib.go  main.go
whatsrust/src/: callbacks.rs  lib.rs
