[package]
name = "wstui"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
whatsrust = { path = "whatsrust" }
clap = { version = "4.5", features = ["derive"] }
textwrap = "0.16.2"
chrono = "0.4.40"
strum = { version = "0.26.3", features = ["derive"] }
unicode-width = "=0.2.0"
# rusqlite = { version = "0.34.0", features = ["bundled"] }
# turbosql = "0.12.0"
ratatui = "0.29.0"
ratatui-image = "5.0.0"
tui-textarea = "0.7.0"
tui-logger = "0.17.1"
qr2term = "0.3.3"

