[package]
name = "wstui"
version = "0.1.0"
edition = "2024"

[dependencies]
notify-rust = "4"
log = "0.4"
whatsrust = { path = "whatsrust" }
clap = { version = "4.5", features = ["derive"] }
textwrap = "0.16.2"
chrono = "0.4.43"
image = "0.25.9"
rusqlite = { version = "0.34.0", features = ["bundled"] }
ratatui = "0.30.0"
ratatui-image = "10.0.6"
strum = { version = "0.27", features = ["derive"] }
ratatui-textarea = "0.8.0"
tui-logger = "0.18.1"
qr2term = "0.3.3"

